--- a/config.toml
+++ b/config.toml
@@ -1,14 +1,14 @@
-baseURL = "http://www.example.com"
-title = "Minimo"
+baseURL = "https://geowarin.github.io"
+title = "Geowarin"
 # for smart copyright line, leave this blank and check [params.copyright]
 copyright = ""
 
 theme = "minimo"
 
-disqusShortname = ""
-googleAnalytics = ""
+disqusShortname = "geowarin"
+googleAnalytics = "UA-46024908-1"
 
-Paginate = 5
+Paginate = 10
 preserveTaxonomyNames = true
 
 enableRobotsTXT = true # generate robots.txt
@@ -22,18 +22,18 @@ enableEmoji = true
 defaultContentLanguage = "en"
 
 [params.info]
-description = "Minimalist theme for Hugo"
+description = "Web developer"
 title404 = "Nothing's here!"
 
 [params.assets]
 favicon = "favicon.ico"
 customCSS = ["css/custom.css"]
-customJS = ["js/custom.js"]
+customJS = []
 gopher = "" # used in 404 template ( Generator: https://gopherize.me )
 
 [params.copyright]
 prefix = ""
-holder = "MunifTanjim"
+holder = "geowarin"
 startYear = "2017"
 suffix = ""
 
@@ -43,21 +43,22 @@ dateFormat = "2006, Jan 02"
 listDateFormat = "2006, Jan 02"
 archiveDateFormat = "Jan 02"
 hideEntryNavigation = ["page"] # boolean / array of sections
-hideEntryMeta = ["page"] # boolean / array of sections
+#hideEntryMeta = ["page"] # boolean / array of sections
 showReadingTime = true
-showLastmod = true
+# showLastmod = true
 taxonomyCloudShuffle = true
-accentColor = "#ffcd00"
-hideMainMenu = false
+#accentColor = "#ffcd00"
+#hideMainMenu = false
 
 [params.sidebar]
 enable = true
+sticky = true
 
 [params.widgets]
 header = ["breadcrumbs"]
 homepage = ["recent_posts"]
-sidebar = ["about","search","sidebar_menu","taxonomy_cloud"]
-footer = ["social_menu"]
+sidebar = ["about", "search", "social_menu"]
+# footer = ["social_menu"]
 
 [params.opengraph.facebook]
 admins = [] # array of Facebook IDs
@@ -65,77 +66,71 @@ appID = ""
 pageID = ""
 
 [params.opengraph.twitter]
-page = "" # Twitter page username
+page = "geowarin" # Twitter page username
 
 [params.seo]
 # Title Separator: - – — · • * ⋆ | ~ « » < >
 titleSeparator = "•"
 
 [params.social]
-codepen = "MunifTanjim"
-email = "contact@example.com"
-facebook = "MunifTanjim"
-github = "MunifTanjim"
-gitlab = "MunifTanjim"
-instagram = "MunifTanjim"
-linkedin = "muniftanjim"
-twitter = "MunifTanjim"
-telegram = "MunifTanjim"
-google_scholar = "qc6CJjYAAAAJ"
-youtube = "UCT-U0rNerYxItGcuoPX-WYA"
+# codepen = "geowarin"
+# email = "contact@example.com"
+# facebook = "geowarin"
+github = "geowarin"
+# gitlab = "geowarin"
+# instagram = "geowarin"
+linkedin = "geowarin"
+twitter = "geowarin"
+# telegram = "geowarin"
+# google_scholar = "qc6CJjYAAAAJ"
 
 [params.comments]
-enable = false
-
-# Isso: https://posativ.org/isso/
-[params.comments.isso]
-enable = false
-scriptSrc = "" # "https://isso.example.com/js/embed.min.js"
-dataAttrs = "" # "data-isso='https://isso.example.com' data-isso-require-author='true'"
-
-[params.comments.staticman]
 enable = true
-apiEndpoint = "https://api.staticman.net/v2/entry"
-maxDepth = 2
-username = "MunifTanjim"
-repository = "minimo"
 
-# Utterances: https://utteranc.es
-[params.comments.utterances]
-enable = false
-issueTerm = "pathname" # pathname / url / title / og:title / <string>
-label = ""
-theme = "github-light"
-
-[params.comments.utterances.github]
-username = "MunifTanjim"
-repository = "minimo"
+[params.social.config]
+platforms = ["github","facebook","twitter","instagram","email","codepen","gitlab","linkedin","telegram","google_scholar"]
 
 [params.search]
-client = "fuse" # algolia / fuse / lunr
+client = "lunr"
 
-[params.search.algolia]
-appId = ""
-indexName = ""
-searchApiKey = ""
+# [params.search.algolia]
+# appId = "7DRJRSRA5B"
+# indexName = "blog"
+# searchApiKey = "17da2ed829c7d13cb4fa75dc5f5b19b2"
 
 [taxonomies]
 author = "authors"
 category = "categories"
-series = "series"
+# series = "series"
 tag = "tags"
 
 [permalinks]
 page = "/:slug/"
+post = "/:title/"
+
+[[menu.main]]
+name = "Blog"
+weight = -30
+identifier = "blog"
+url = "/"
+
+[[menu.main]]
+name = "Archive"
+weight = -20
+identifier = "archive"
+url = "/archive/"
+
+[[menu.main]]
+name = "Book"
+weight = -10
+identifier = "book"
+url = "/mastering-spring-mvc-4/"
 
 [[menu.main]]
 name = "Repo"
-weight = -10
+weight = 0
 identifier = "repository"
-url = "https://github.com/MunifTanjim/minimo"
-
-[blackfriday]
-hrefTargetBlank = true
+url = "https://github.com/geowarin/blog-src"
 
 [languages]
 # edit this block for your own language
