--- a/config.yml
+++ b/config.yml
@@ -31,6 +31,7 @@ params:
 #  disableThemeToggle: false
   ShowReadingTime: true
   ShowShareButtons: true
+  ShareButtons: [ "bluesky", "linkedin", "twitter", "reddit" ]
   ShowPostNavLinks: true
   ShowBreadCrumbs: true
   ShowCodeCopyButtons: true
